--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -4,9 +4,29 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>React Application</title>
+
+    <title><%= webpackConfig.metadata.title %></title>
+
+    <meta name="description" content="<%= webpackConfig.metadata.title %>">
+
+    <% if (webpackConfig.htmlElements.headTags) { %>
+    <!-- Configured Head Tags  -->
+    <%= webpackConfig.htmlElements.headTags %>
+    <% } %>
+
+    <!-- base url -->
+    <base href="<%= webpackConfig.metadata.baseUrl %>">
+
 </head>
-<booy>
-    <div id="app"></div>
-</booy>
+<body>
+<div id="app"></div>
+
+<% if (webpackConfig.metadata.isDevServer && webpackConfig.metadata.HMR !== true) { %>
+<!-- Webpack Dev Server reload -->
+<script src="/webpack-dev-server.js"></script>
+<% } %>
+
+</body>
+
 </html>
+
